# next

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README-dev.md  claude-admin.sh  inventory.conf  package-lock.json  package.json  pull_request_template.md  setup-user.sh
.github/workflows/: client_linux.yaml  client_macos.yaml  client_macos_arm64.yaml  client_windows.yaml  tag_linux.yaml  (+6 more)
deployment/: .gitignore  Build-Push  FORESIGHT.md  README.md  docker-compose-amd64.yml  docker-compose-arm64.yml  docker-compose-simple.yml  export_bundle.sh
pysage3/: README.md  pyproject.toml
pysage3/pysage3/: .gitignore  README.md  notes.txt
pysage3/pysage3/config/: __init__.py
pysage3/pysage3/smartbits/: counter.py  gltfviewer.py
pysage3/scripts/: docker-compose-proxy.yml  start-proxy.sh
pysage3/src/pysage3/: README.md  __init__.py  alignment_strategies.py  board.py  client.py  jupyterkernelproxy.py  proxy.py  smartbitfactory.py
pysage3/src/pysage3/config/: __init__.py
pysage3/src/pysage3/smartbits/: assetlink.py  boardlink.py  calculator.py  chat.py  clock.py  codeeditor.py  csvviewer.py  deepzoomimage.py  genericsmartbit.py  iframe.py  imageviewer.py  map.py  notepad.py  pdfviewer.py  poll.py  sagecell.py  smartbit.py  stickie.py  timer.py  vegalite.py  vegaliteviewer.py  videoviewer.py  webpagelink.py  webview.py
pysage3/src/pysage3/utils/: sage_communication.py  sage_websocket.py
sage3/: deploy.sh  docker-compose.yml  nginx.conf  sage3-ldap-config.hjson
seer/: main.py  requirements.txt
webstack/: package.json  sage3-dev.hjson  sage3-prod.hjson  workspace.json
(+125 files in other folders)
