
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysage3"
version = "1.1.0"
authors = [
  { name="SAGE3 Team", email="sage3app@gmail.com" },
]
description = "SAGE3 API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx",
  "rectpack",
  "networkx",
  "graphviz",
  "pydantic>=2",
  "websocket-client",
  "redis",
  "requests>=2.32.0",
  "numpy>=1.22.2",
  "urllib3>=2.2.2",
  "ws4py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pysage3"]

[project.urls]
Homepage = "https://github.com/SAGE-3/next"

